--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/optica
 # Nombre de usuario para la conexión a la base de datos.
 spring.datasource.username=root
 # Contraseña para la conexión. En este caso, está vacía.
-spring.datasource.password=123456
-
+spring.datasource.password=
 # Hace que Hibernate muestre en la consola todas las sentencias SQL que ejecuta. Muy útil para depurar.
 spring.jpa.show-sql=true
 
